# security_code_signature

./: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  code_signature.gni  hisysevent.yaml
codesigntool/: codesigntool_settings.xml  pom.xml
codesigntool/code_sign_appgallery_lib/: pom.xml
codesigntool/code_sign_appgallery_lib/src/main/java/com/ohos/codesigntool/core/factory/: RemoteCodeSignProviderFactory.java
codesigntool/code_sign_appgallery_lib/src/main/java/com/ohos/codesigntool/core/provider/: RemoteCodeSignProvider.java
codesigntool/code_sign_appgallery_lib/src/main/java/com/ohos/codesigntool/core/signtool/: CodeSignTool.java
codesigntool/code_sign_appgallery_lib/src/test/resources/cs_cert/: chain.pem  cstest.jks
codesigntool/code_sign_appgallery_lib/src/test/resources/haps/FA/: false.hap  none.hap  true.hap
codesigntool/code_sign_appgallery_lib/src/test/resources/haps/STAGE/: false.hap  none.hap  true.hap
codesigntool/code_sign_appgallery_lib/src/test/resources/hashtestfile/: 1000000file  4095file
codesigntool/code_sign_tool_lib/: pom.xml
codesigntool/code_sign_tool_lib/src/main/java/com/ohos/codesigntool/core/api/: CodeSignServer.java
codesigntool/code_sign_tool_lib/src/main/java/com/ohos/codesigntool/core/config/: CodeSignConfig.java  CodeSignerConfig.java  RemoteCodeSignConfig.java  RemoteCodeSignerConfig.java
codesigntool/code_sign_tool_lib/src/main/java/com/ohos/codesigntool/core/exception/: CodeSignException.java  FsVerityDigestException.java  InvalidParamsException.java  MissingParamsException.java  SignatureException.java  VerifyCertificateChainException.java
codesigntool/code_sign_tool_lib/src/main/java/com/ohos/codesigntool/core/factory/: IProviderFactory.java
codesigntool/code_sign_tool_lib/src/main/java/com/ohos/codesigntool/core/fsverity/: FsVerityDescriptor.java  (+5 more)
codesigntool/code_sign_tool_lib/src/test/java/com/ohos/codesigntool/test/: MerkleTreeTest.java
interfaces/innerkits/code_sign_utils/: BUILD.gn
interfaces/innerkits/code_sign_utils/include/: code_sign_utils.h  constants.h  stat_utils.h
interfaces/innerkits/code_sign_utils/src/: code_sign_utils.cpp
interfaces/innerkits/common/include/: byte_buffer.h  errcode.h
interfaces/innerkits/local_code_sign/: BUILD.gn
interfaces/innerkits/local_code_sign/include/: local_code_sign_client.h  local_code_sign_interface.h  local_code_sign_kit.h  local_code_sign_proxy.h
interfaces/innerkits/local_code_sign/src/: local_code_sign_client.cpp  local_code_sign_kit.cpp  local_code_sign_load_callback.cpp  local_code_sign_proxy.cpp
services/key_enable/: BUILD.gn  key_enable.cfg
services/key_enable/config/: trusted_code_signature_ca.cer  trusted_code_signature_certs.cer  trusted_code_signature_test_certs.cer
services/key_enable/src/: cert_chain_utils.rs  cert_utils.rs  cs_hisysevent.rs  file_utils.rs  key_enable.rs  main.rs
services/key_enable/utils/: BUILD.gn
services/key_enable/utils/include/: key_utils.h  local_code_sign_utils.h
services/key_enable/utils/src/: key_utils.cpp  local_code_sign_utils.cpp
services/local_code_sign/: BUILD.gn  local_code_sign.cfg
services/local_code_sign/include/: local_code_sign_service.h  local_code_sign_stub.h  local_sign_key.h  permission_utils.h
services/local_code_sign/sa_profile/: 3507.json
services/local_code_sign/src/: local_code_sign_service.cpp  local_code_sign_stub.cpp  local_sign_key.cpp  permission_utils.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/: BUILD.gn  signlocalcodestub_fuzzer.cpp  signlocalcodestub_fuzzer.h
test/fuzztest/local_code_sign_stub/signlocalcodestub_fuzzer/corpus/: init
test/unittest/: BUILD.gn  code_sign_utils_test.cpp  local_code_sign_test.cpp  multi_thread_local_sign_test.cpp  sign_and_enforce_test.cpp
test/unittest/resources/: ohos_test.xml
test/unittest/resources/demo_with_multi_lib/: demo_with_multi_lib.hap  demo_with_multi_lib.sig
test/unittest/resources/demo_with_multi_lib/libs/arm64-v8a/: libc++_shared.so.fsv-sig  libentry.so.fsv-sig  libtest.so.fsv-sig
test/unittest/resources/demo_with_multi_lib/pkcs7_error/: demo_with_multi_lib_001.sig  demo_with_multi_lib_002.sig  demo_with_multi_lib_003.sig  demo_with_multi_lib_004.sig  demo_with_multi_lib_005.sig  demo_with_multi_lib_006.sig  demo_with_multi_lib_007.sig  demo_with_multi_lib_008.sig
test/unittest/resources/demo_with_multi_lib/pkcs7_error/file/: libentry_01.so.fsv-sig  libentry_02.so.fsv-sig  libentry_03.so.fsv-sig  libentry_04.so.fsv-sig  libentry_05.so.fsv-sig  libentry_06.so.fsv-sig  libentry_07.so.fsv-sig  libentry_08.so.fsv-sig
test/unittest/resources/demo_with_multi_lib_error/: demo_with_multi_lib.hap
test/unittest/resources/demo_with_single_lib/: demo_with_single_lib.hap  demo_with_single_lib.sig
test/unittest/resources/demo_with_single_lib/libs/arm64-v8a/: libc++_shared.so.fsv-sig  libentry.so.fsv-sig
test/unittest/resources/demo_without_lib/: demo_without_lib.hap  demo_without_lib.sig
test/unittest/resources/demo_without_lib/pkcs7_error/: demo_without_lib_001.sig  demo_without_lib_002.sig  demo_without_lib_003.sig  demo_without_lib_004.sig  demo_without_lib_005.sig  demo_without_lib_006.sig  demo_without_lib_007.sig
test/unittest/utils/include/: access_token_setter.h
utils/: BUILD.gn
utils/include/: cert_utils.h  cs_hisysevent.h  cs_hitrace.h  file_helper.h  fsverity_utils_helper.h  openssl_utils.h  pkcs7_data.h  pkcs7_generator.h  sign_key.h  signer_info.h
utils/src/: cert_utils.cpp  file_helper.cpp  fsverity_utils_helper.cpp  openssl_utils.cpp  pkcs7_data.cpp  pkcs7_generator.cpp  signer_info.cpp
(+31 files in other folders)
